# serializall

./: .gitignore  README.rst  pyproject.toml
.github/workflows/: tests-utils.yml  tests.yml
docs/: requirements.txt
docs/src/: conf.py  index.rst
src/: __init__.py  serializer.py
src/serializall/: __init__.py  factory.py  serializer.py
tests/: readme_test.py  ser_utils_test.py  serializer_test.py
tests/serialize/: serializer_test.py
